fix: z-index layouts

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -101,7 +101,7 @@ nav > button {
   inset: 0;
   background-color: rgba(0, 0, 0, 0);
   transition: 0.5s ease;
-  z-index: 5;
+  z-index: 6;
   pointer-events: none;
 }
 
